--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -15,15 +16,38 @@
 </head>
 
 <body>
+<!-- Navigation -->
+  <div class="navbar">
+    <div>
+      <h1>Fun Bus</h1>
+      <nav class="nav">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+  </div>
+<!-- Header -->
+  <header class="header">
+    <section class="header-section">
+      <div class="header-img">
+        <img src="img/fun-bus.jpg" alt="Image of the Fun Bus!">
+      </div>
 
-  
-     
+      <div class="header-text">
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam inventore animi placeat itaque odio modi doloribus harum voluptatum quidem sed facere culpa officiis sunt soluta corporis, minima reprehenderit quae perspiciatis.</p>
+      </div>
+    </section>
+  </header>
+
   <div class="container home">
-   
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
-        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
       <div class="img-content">
@@ -36,10 +60,10 @@
       </div>
       <div class="text-content">
         <h2>Adventure Awaits</h2>
-        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
-     
+
     </section>
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
